--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Pixelify Sans', sans-serif;
+    ;
 }
 
 ul, li, ol {
@@ -42,7 +44,8 @@ body {
 
 
 .searchbar {
-    height: 20vh;
+    height: 250px;
+    gap: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -54,7 +57,7 @@ body {
     width: 100%;
     padding: 0 10px;
     font-size: 1em;
-    font-family: 'Pixelify Sans', sans-serif;
+    /* font-family: 'Pixelify Sans', sans-serif; */
 }
 
 .searchbar button {
@@ -66,8 +69,8 @@ body {
 }
 
 button img {
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 50px;
 }
 
 /* MAIN  */
@@ -84,7 +87,7 @@ button img {
 
 .pokemon_img {
     display: flex;
-    flex-basis: 50%;
+    flex-basis: 40%;
     justify-content: center;
     align-items: center;
 }
@@ -96,7 +99,8 @@ button img {
 
 .pokemon_stats {
     display: flex;
-    flex-basis: 30%;
+    flex-basis: 25%;
+    justify-content: center;
 }
 
 .pokemon_stats li {
@@ -106,6 +110,7 @@ button img {
     gap: 10px;
     text-transform: capitalize;
 }
+
 
 
 .pokemon_resume {
@@ -121,19 +126,18 @@ button img {
 #height p {
     font-size: 1.5rem;
     color: white;
-    font-family: 'Pixelify Sans', sans-serif;
 }
 
 .add_pokemon {
     display: flex;
-    flex-basis: 20%;
+    flex-basis: 35%;
     justify-content: center;
     align-items: center;
 }
 
 #add {
     cursor: pointer;
-    padding: 5px;
+    padding: 15px;
     border-radius: 15px;
     background-color: yellow;
     border: none;
@@ -166,8 +170,6 @@ button img {
 .pokedex h3 {
     text-transform: capitalize;
     padding-bottom: 10px;
-    font-family: 'Pixelify Sans', sans-serif;
-
 }
 
 .show {
@@ -192,18 +194,25 @@ button img {
     cursor: pointer;
 }
 
+.text_team {
+    font-size: 3rem;
+    color: white;
+    text-align: center;
+}
+
 /* MEDIA FOR DEVICE  */
 
 
-@media (max-width:768px){
+@media (max-width:768px) {
 
-    .pokemon_selected{
+    .pokemon_selected {
         flex-direction: column;
         justify-content: center;
         align-items: center;
         row-gap: 20px;
     }
-    .pokedex li{
+
+    .pokedex li {
         flex-basis: calc(50% - 10px);
     }
 }
